night mode added. bug fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,7 @@
     <string name="eksik_bilgiler">Eksik Bilgiler Girdiniz!</string>
     <string name="mesaj_yazma">Bir Mesaj Gönderin!</string>
     <string name="gece_modu">Gece Modu</string>
+    <string name="mesaj">Mesaj</string>
 
 
     <string-array name="tasinmaSekli">
