offer details added. layout added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="llce">İlçe</string>
     <string name="esyanin_gidecegi_il">Eşyanın Gideceği İl</string>
     <string name="esyanin_gidecegi_ilce">Eşyanın Gideceği İlçe</string>
-    <string name="esyanin_cikacagi_kat_sayisi">Eşyanın Çıkacağı Kat Sayısı</string>
+    <string name="esyanin_cikacagi_kat_sayisi">Çıkılacak Kat Sayısı</string>
     <string name="aciklama">Açıklama</string>
     <string name="ilan_ver">İlan Ver</string>
     <string name="esyanin_tasinma_sekli">Eşya Taşınma Şekli</string>
@@ -51,7 +51,12 @@
     <string name="mesaj_yazma">Bir Mesaj Gönderin!</string>
     <string name="gece_modu">Gece Modu</string>
     <string name="mesaj">Mesaj</string>
+    <string name="il">İl</string>
+    <string name="tasinma_bilgileri">Taşınma Bilgileri</string>
 
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="ilan_detay">İlan Detayı</string>
 
     <string-array name="tasinmaSekli">
         <item>Bina Merdiveni</item>
@@ -85,6 +90,7 @@
         <item>-2.Kat</item>
     </string-array>
 
+    <!-- TODO: Remove or change this placeholder text -->
     <string-array name="odaSayisi">
         <item>1+1</item>
         <item>2+1</item>
