slider added. viewpager added. Message added.

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -37,4 +37,6 @@
     <string name="mesaj">Message</string>
     <string name="ilan_detay">Offer Details</string>
     <string name="il">Province</string>
+    <string name="skip">Skip</string>
+    <string name="get_starded">Get Started</string>
 </resources>
