--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,6 @@
     <string name="title_activity_offer" translatable="false">OfferActivity</string>
     <string name="title_activity_maps_new" translatable="false">Map</string>
     <string name="splashText" translatable="false">Bring It</string>
-    <string name="tv_main">Taşınacak eşyalarınız için Bring İt aracılığıyla, ilan bilgisini girerek, teklif alabilirsiniz.
-        Eğer, eşya taşımayı düşünüyorsanız ilanlara bakarak, teklif verebilirisniz.</string>
     <string name="tarih">Tarih</string>
     <string name="e_yan_n_bulundu_u_l">Eşyanın Bulunduğu İl</string>
     <string name="llce">İlçe</string>
@@ -53,12 +51,17 @@
     <string name="mesaj">Mesaj</string>
     <string name="il">İl</string>
     <string name="tasinma_bilgileri">Taşınma Bilgileri</string>
-
-
-    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="ilan_detay">İlan Detayı</string>
     <string name="bilgiler">Bilgiler</string>
     <string name="kullanici_adi">Kullanıcı Adı:</string>
+    <string name="teklif_ver">Teklif Verin</string>
+    <string name="ilan_yayınla">İlan Verin</string>
+    <string name="tv_slider">Bring It, eşyalarınızı kolay, ucuz ve güvenli bir şekilde taşımanızı kolaylaştırır. İlanları, konumunuza göre getirir.</string>
+    <string name="tv_slider1">Taşınıyorsanız veya eşyalarınızı bir yere götürmek istiyorsanız, kolayca ilan verin ve nakliye firmalarından teklif almaya başlayın.</string>
+    <string name="tv_slider2">Nakliye firmanız mı var? Profesyonel bir şekilde taşımak mı istiyorsanız? İlanlara bakarak, teklif verebilirsiniz. BringIt, konumunuza göre ilanları getirir.</string>
+    <string name="skip">Geç</string>
+    <string name="get_starded">Başlayın</string>
+
 
     <string-array name="tasinmaSekli">
         <item>Bina Merdiveni</item>
