--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -17,4 +17,36 @@
     <string name="esyanin_tasinma_sekli">"Art zu bewegen "</string>
     <string name="hesap">Konto</string>
     <string name="il">Province</string>
+    <string name="yeni_mesaj">Neue Nachricht!</string>
+    <string name="web_sitesi">Webseite</string>
+    <string name="veriler_alinamadi">Daten fehlgeschlagen!</string>
+    <string name="tv_slider">Trägt Ihre Sachen billig und sicher</string>
+    <string name="tel_no">Telefonnummer</string>
+    <string name="teklif_ver">Bieten</string>
+    <string name="tasinma_bilgileri">Informationen verschieben</string>
+    <string name="tasima">Transport</string>
+    <string name="tarih">Datum</string>
+    <string name="tamam">Okay</string>
+    <string name="skip">Überspringen</string>
+    <string name="seen">Gesehen</string>
+    <string name="mesajlar">Mitteilungen</string>
+    <string name="mesaj">Botschaft</string>
+    <string name="mail_adresi">Mail Adresse</string>
+    <string name="location_izin_Ver">Erlauben Sie mir bitte!</string>
+    <string name="llce">Kreis</string>
+    <string name="kullanici_adi">Nutzername:</string>
+    <string name="kayit_basarisiz">Registrierung fehlgeschlagen!</string>
+    <string name="kaydet">sparen</string>
+    <string name="ilan_detay">"Details zum Angebot "</string>
+    <string name="ilan_ver">"Werben "</string>
+    <string name="ilan_yayınla">"Werben "</string>
+    <string name="ilanlar">Führt</string>
+    <string name="iptal">Stornieren</string>
+    <string name="kapat">Schließen</string>
+    <string name="bilgiler">Die Info</string>
+    <string name="delivered">Geliefert</string>
+    <string name="get_starded">Loslegen</string>
+    <string name="kat_sayisi">Anzahl der Stockwerke</string>
+    <string name="tv_slider2">Haben Sie eine Reederei? Möchten Sie es professionell tragen? Sie können bieten, indem Sie die Anzeigen betrachten. BringIt bringt Anzeigen basierend auf Ihrem Standort.</string>
+    <string name="tv_slider1">Wenn Sie umziehen oder Ihre Sachen an einen Ort bringen möchten, machen Sie einfach Werbung und holen Sie Angebote von Reedereien ein.</string>
 </resources>
