--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -40,7 +40,7 @@
     <string name="skip">Skip</string>
     <string name="get_starded">Get Started</string>
     <string name="bilgiler">Info</string>
-    <string name="kullanici_adi">"User Name: "</string>
+    <string name="kullanici_adi">"Welcome: "</string>
     <string name="delivered">Delivered</string>
     <string name="seen">Seen</string>
     <string name="yeni_mesaj">New Message!</string>
@@ -49,4 +49,9 @@
     <string name="tv_slider">Bring It makes it easy to transport your belongings easily, cheaply and safely. Lists ads by your location.</string>
     <string name="tv_slider2">Do you have a shipping company? Want to carry it professionally? You can bid by looking at the ads. BringIt brings ads based on your location.</string>
     <string name="tv_slider1">If you are moving or you want to take your things to a place, simply advertise and start getting offers from shipping companies.</string>
+    <string name="yukleme">Uploading!</string>
+    <string name="yukleme_devam">Upload is Progress</string>
+    <string name="hata">Error!</string>
+    <string name="fotograf_secilmedi">No images selected!</string>
+    <string name="arama">Search</string>
 </resources>
