--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -54,4 +54,6 @@
     <string name="hata">Error!</string>
     <string name="fotograf_secilmedi">No images selected!</string>
     <string name="arama">Search</string>
+    <string name="cikis_yap">Exit</string>
+    <string name="cikis_yapildi">"Exited "</string>
 </resources>
