--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,8 @@
     <string name="fotograf_secilmedi">Fotoğraf seçilmedi!</string>
     <string name="yukleme_devam">Yükleme Devam Ediyor</string>
     <string name="arama">Arama</string>
+    <string name="cikis_yapildi">Çıkış Yapıldı</string>
+    <string name="cikis_yap">Çıkış Yap</string>
 
 
 </resources>
